# logi-v3

./: Cargo.toml
fleetbase-rs/: Cargo.toml
fleetbase-rs/src/: client.rs  contact.rs  driver.rs  entity.rs  lib.rs  order.rs  organization.rs  place.rs  purchase_rate.rs  resource.rs  service_area.rs  service_quote.rs  service_rate.rs  tracking_number.rs  tracking_status.rs  vehicle.rs  vendor.rs  zone.rs
fleetbase-rs/src/utils/: enpdpoints.rs  helpers.rs  mod.rs  store_actions.rs
