[package]
name = "fleetbase-rs"
version = "0.1.0"
edition = "2021"
authors = ["Ruud Erie <ruud@oply.co>"]
description = "A Rust SDK for FleetOps TMS integration"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
regex = "1.5"
mockito = "0.30"

[dev-dependencies]
tokio-test = "0.4"
